refactor: 메서드 분리 진행